--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,28 @@
-body {
-  background-color: #e1e388;
+.contacts {
+  width: 300px;
+  margin: 0 auto;
 }
 
-.field {
+.contacts-list {
+  padding: 0;
+  width: 100%;
+}
+
+.contact {
   display: flex;
-  padding: 10px;
-  width: 25%;
-  margin-left: 37.5%;
-  color: #fff;
-  font-size: 1.3em;
-  flex-direction: column;
   align-items: center;
+  font-family: sans-serif;
+  width: 100%;
+  padding: 5px;
+  border-bottom: 1px dotter green;
 }
 
-.box {
-  border: 2px solid #aaa719;
-  background-color: #d4d37f;
-  margin-bottom: 20px;
-  padding: 10px;
-  width: 80%;
+.contact-name {
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.box:last-child {
-  margin-bottom: 0;
-}
-
-button.btn {
-  margin-right: 10px;
-  padding: 10px;
-  margin-top: 10px;
-  cursor: pointer;
-  font-size: 0.65em;
-  color: #fff;
-  outline: none;
-}
-
-.btn.light {
-  background-color: #4eafc9;
-  border: 2px solid #2a89a2;
-}
-
-.btn.red {
-  background-color: #dda66d;
-  border: 2px solid #b6821a;
-}
-
-.btn.light:hover {
-  background-color: #2a89a2;
-  border-color: #1d6f85;
-}
-
-.btn.red:hover {
-  background-color: #b6821a;
-  border-color: #946912;
+.contact-surname {
+  font-size: 20px;
+  font-weight: bold;
 }
