--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.search {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+}
 .contacts {
   width: 300px;
   margin: 0 auto;
@@ -20,6 +25,7 @@
 .contact-name {
   font-size: 20px;
   font-weight: bold;
+  padding: 10px;
 }
 
 .contact-surname {
